# learn-wgpu

./: Cargo.toml
src/: lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  shader_2.wgsl  texture.rs
